--- a/Mean Stack App - Restaurant Reservation/client/partials/login.html
+++ b/Mean Stack App - Restaurant Reservation/client/partials/login.html
@@ -13,5 +13,8 @@
       <div>
         <button type="submit" class="btn btn-default" ng-disabled="disabled">Login</button>
       </div>
+      <div>
+      <p> Don't have an accout? <a href="#/register">Click here</a> to register! </p>
+      </div>
   </form>
 </div>
