--- a/Mean Stack App - Restaurant Reservation/client/partials/register.html
+++ b/Mean Stack App - Restaurant Reservation/client/partials/register.html
@@ -8,10 +8,22 @@
     </div>
     <div class="form-group">
       <label>Password</label>
-        <input type="password" class="form-control" name="password" ng-model="registerForm.password" required>
-      </div>
-      <div>
-        <button type="submit" class="btn btn-default" ng-disabled="disabled">Register</button>
-      </div>
+      <input type="password" class="form-control" name="password" ng-model="registerForm.password" required>
+    </div>
+    <div class="form-group">
+      <label>First Name</label>
+      <input type="text" class="form-control" name="password" ng-model="registerForm.firstname" required>
+    </div>
+    <div class="form-group">
+      <label>Last Name</label>
+      <input type="text" class="form-control" name="password" ng-model="registerForm.lastname" required>
+    </div>
+    <div class="form-group">
+      <label>Phone Number</label>
+      <input type="text" class="form-control" name="password" ng-model="registerForm.phonenumber" required>
+    </div>
+    <div>
+      <button type="submit" class="btn btn-default" ng-disabled="disabled">Register</button>
+    </div>
   </form>
 </div>
